--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -171,11 +171,15 @@
 .nav-link:hover {
     background: rgba(255, 255, 255, 0.08) !important;
     color: rgba(255, 255, 255, 0.9) !important;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .nav-link.active {
     background: rgba(255, 255, 255, 0.08) !important;
     color: rgba(255, 255, 255, 0.9) !important;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .nav-link i {
